--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="hero-image">
                 <div class="hero-bg"></div>
                 <!-- Replace with your actual image path -->
-                <img src="S:\development\SARA project\imgs\sara.jpeg" alt="Sara - UI/UX Designer" class="profile-img">
+                <img src="imgs\sara.jpeg" alt="Sara - UI/UX Designer" class="profile-img">
             </div>
         </div>
     </section>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="about-img">
                     <!-- Replace with your actual image path -->
-                    <img src="S:\development\SARA project\imgs\samer and sara.jpeg" alt="Sara working">
+                    <img src="imgs\samer and sara.jpeg" alt="Sara working">
                 </div>
             </div>
         </div>
